--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,4 @@
-header {
+.main-header {
   height: 400px;
   width: 100%;
   display: flex;
@@ -8,8 +8,9 @@ header {
   background-color: #c28b00;
   background-image: url("https://www.transparenttextures.com/patterns/60-lines.png");
   color: white;
+  margin-top: 120px;
 }
 
-header img {
+.main-header img {
   padding-top: 1.5em;
 }
