--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,11 +24,31 @@ body {
   align-items: center;
 }
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+#media-test {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 120px;
+}
 
- main {
-   width: 90%;
-   margin-bottom: 40px;
- }
+main {
+  width: 90%;
+  margin-bottom: 40px;
+}
+
+@media only screen and (min-width: 1024px) {
+  #media-test {
+    flex-direction: row;
+  }
+
+  #media-test .main-header {
+    justify-content: flex-start;
+    align-self: stretch;
+    width: 50%;
+  }
+
+  #media-test main {
+    margin: 20px;
+  }
+}
