--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,8 +8,8 @@
 }
 
 .new-tweet {
-  margin-bottom: 40px;
-  margin-top: 40px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .new-tweet textarea {
@@ -20,7 +20,7 @@
   resize: none;
   border-bottom: 5px solid black;
   margin-top: 10px;
-  height: 40px;
+  height: 2em;
 }
 
 .new-tweet .under-form {
