--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -2,6 +2,7 @@
   margin-top: 20px;
   padding: 15px 15px;
   border: 4px solid black;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
 }
