--- a/public/styles/error.css
+++ b/public/styles/error.css
@@ -6,7 +6,8 @@
   height: 40px;
   background-color: rgb(201, 108, 108);
   border-radius: 3px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 #error-cont h3 {
