--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -34,7 +34,7 @@ body {
 
 main {
   width: 90%;
-  margin-bottom: 40px;
+  padding-bottom: 20px;
 }
 
 @media only screen and (min-width: 1024px) {
@@ -49,6 +49,7 @@ main {
   }
 
   #media-test main {
-    margin: 20px;
+    padding: 0 20px 20px 20px;
+    border-left: 4px solid black;
   }
 }
