--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -2,19 +2,23 @@
   margin-top: 20px;
   padding: 15px 15px;
   border: 4px solid black;
-  border-radius: 5px;
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
 }
 
 .tweet-container:hover {
   box-shadow: 10px 10px 2px #02020244;
-  text-shadow: 1px 1px 1px #02020233;
-  transform: translate(-7px, -7px);
+  transform: translate(-5px, -5px);
+  transition: transform 100ms;
 }
 
 .tweet-container:hover .user-ID {
   opacity: 30%;
+}
+
+.tweet-container:hover .icons {
+  color: rgba(0, 0, 104, 0.76);
 }
 
 .tweet-container header {
@@ -51,4 +55,8 @@
 
 .tweet-container .icons span {
   margin-left: 10px;
+}
+
+.tweet-container .icons span:hover {
+  cursor: pointer;
 }
