--- a/public/styles/error.css
+++ b/public/styles/error.css
@@ -1,7 +1,3 @@
-.hideElem {
-  display: none !important;
-}
-
 #error-cont {
   height: 40px;
   background-color: rgb(201, 108, 108);
@@ -16,7 +12,7 @@
   font-weight: bold;
 }
 
-#testing {
+#error-text-cont {
   width: 100%;
   height: 100%;
   display: flex;
