--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -40,16 +40,18 @@ main {
 @media only screen and (min-width: 1024px) {
   #content-container {
     flex-direction: row;
+    min-height: 100vh;
   }
 
   #content-container .main-header {
+    border-right: 4px solid black;
     justify-content: flex-start;
     align-self: stretch;
-    width: 50%;
+    max-width: 400px;
   }
 
   #content-container main {
     padding: 0 20px 20px 20px;
-    border-left: 4px solid black;
+    align-self: flex-start;
   }
 }
